Add initial scraping

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "description": "A template for kick starting a Cloudflare Workers project",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write '**/*.{js,css,json,md}'"
@@ -11,11 +12,15 @@
   "author": "Mihai Costea <macostea@users.noreply.github.com>",
   "license": "MIT",
   "devDependencies": {
-    "prettier": "^1.18.2"
+    "@cloudflare/workers-types": "^4.20230904.0",
+    "@types/node": "^20.6.0",
+    "prettier": "^3.0.3",
+    "typescript": "^5.2.2",
+    "wrangler": "^3.7.0"
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.10",
-    "js-base64": "^3.6.1",
-    "node-fetch": "^2.6.1"
+    "cheerio": "^1.0.0-rc.12",
+    "js-base64": "^3.7.5",
+    "node-fetch": "^3.3.2"
   }
 }
