--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,8 +1,10 @@
 name = "bancuri-bot"
-type = "webpack"
 
 account_id = "cc9551da1de1b07834198a21b965d463"
 workers_dev = true
-route = ""
-zone_id = ""
-target_type = "webpack"
+compatibility_date = "2023-09-04"
+
+[[d1_databases]]
+binding = "DB" # i.e. available in your Worker on env.DB
+database_name = "banc-bot"
+database_id = "8f8a2de8-c700-416f-9782-af0d0e0da8be"
